@@ -74,6 +74,7 @@ source "$APPSDIR/examples/slcd/Kconfig"
 source "$APPSDIR/examples/flash_test/Kconfig"
 source "$APPSDIR/examples/smart_test/Kconfig"
 source "$APPSDIR/examples/smart/Kconfig"
+source "$APPSDIR/examples/smp/Kconfig"
 source "$APPSDIR/examples/tcpecho/Kconfig"
 source "$APPSDIR/examples/telnetd/Kconfig"
 source "$APPSDIR/examples/thttpd/Kconfig"
