@@ -1,0 +1,40 @@
+#
+# For a description of the syntax of this configuration file,
+# see the file kconfig-language.txt in the NuttX tools repository.
+#
+
+config EXAMPLES_SMP
+	bool "SMP example"
+	default n
+	---help---
+		Enable the SMP example.  This example basically extracts the pthread
+		barrier test from apps/examples/ostest and adds some instrumentation
+		useful for debugging SMP implementations.
+
+if EXAMPLES_SMP
+
+config EXAMPLES_SMP_NBARRIER_THREADS
+	int "Number of barrier threads"
+	default 8
+	---help---
+		Specifies the number of threads to create in the SMP test.  The default
+		is 8 but a smaller number may be needed on systems without sufficient memory
+		to start so many threads.
+
+config EXAMPLES_SMP_PROGNAME
+	string "Program name"
+	default "smp"
+	depends on BUILD_KERNEL
+	---help---
+		This is the name of the program that will be use when the NSH ELF
+		program is installed.
+
+config EXAMPLES_SMP_PRIORITY
+	int "SMP task priority"
+	default 100
+
+config EXAMPLES_SMP_STACKSIZE
+	int "SMP stack size"
+	default 2048
+
+endif
